// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="sc-bdVaJa kBBRpE"
  type="button"
/>
`;

exports[`Button renders correctly 2`] = `
<button
  className="sc-bdVaJa kBBRpE"
  type="submit"
/>
`;

exports[`Button renders correctly 3`] = `
<button
  className="test1 sc-bdVaJa kBBRpE"
  type="button"
/>
`;

exports[`Button renders correctly 4`] = `
<button
  className="test2 sc-bdVaJa kBBRpE"
  type="submit"
/>
`;

exports[`Button renders primary correctly 1`] = `
<button
  className="sc-bdVaJa blWlU"
  type="button"
/>
`;

exports[`Button renders primary correctly 2`] = `
<button
  className="sc-bdVaJa blWlU"
  type="submit"
/>
`;

exports[`Button renders primary correctly 3`] = `
<button
  className="test1 sc-bdVaJa blWlU"
  type="button"
/>
`;

exports[`Button renders primary correctly 4`] = `
<button
  className="test2 sc-bdVaJa blWlU"
  type="submit"
/>
`;

exports[`Button renders secondary correctly 1`] = `
<button
  className="sc-bdVaJa cWjXpc"
  type="button"
/>
`;

exports[`Button renders secondary correctly 2`] = `
<button
  className="sc-bdVaJa cWjXpc"
  type="submit"
/>
`;

exports[`Button renders secondary correctly 3`] = `
<button
  className="test1 sc-bdVaJa cWjXpc"
  type="button"
/>
`;

exports[`Button renders secondary correctly 4`] = `
<button
  className="test2 sc-bdVaJa cWjXpc"
  type="submit"
/>
`;
